# m3t_tracker_ros

./: .gitignore  .pre-commit-config.yaml  README.md  package.xml  setup.cfg
m3t_tracker_examples/: deps.repos  package.xml  setup.cfg  setup.py
m3t_tracker_examples/config/: camera_info.yaml  tracker_params.yaml
m3t_tracker_examples/launch/: manual_initialization_demo.launch.py
m3t_tracker_examples/m3t_tracker_examples/: dummy_detection_publisher.py  keyboard_monitor.py
m3t_tracker_examples/rviz/: m3t_tracker_example.rviz
m3t_tracker_ros/: cached_tracker.py  custom_validation.py  m3t_tracker_ros_parameters.py  m3t_tracker_ros_parameters.yaml  package.xml  real_time_tracker_node.py  setup.cfg  setup.py  time_delay_compensation_node.py  tracker_node_base.py  utils.py
m3t_tracker_ros/m3t_tracker_ros/: cached_tracker.py  custom_validation.py  image_time_buffer.py  m3t_tracker_ros_parameters.yaml  prepare_sparse_views.py  real_time_tracker_node.py  specialized_tracker.py  time_catchup_node.py  time_delay_compensation_node.py  tracker_node_base.py  utils.py
m3t_tracker_ros/scripts/: prepare_data.py  prepare_sparse_views.py
